--- a/portfolio.html
+++ b/portfolio.html
@@ -91,8 +91,8 @@
                   <img
                     src="img/port.jpg"
                     alt="Веб-сайт"
-                    width="370"
-                    height="294"
+                    width="100%"
+                    height="auto"
                   />
                   <p class="user-portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
@@ -111,8 +111,8 @@
                   <img
                     src="img/port-1.jpg"
                     alt="Веб-сайт"
-                    width="370"
-                    height="294"
+                    width="100%"
+                    height="auto"
                   />
                   <p class="user-portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
@@ -132,8 +132,8 @@
                 <img
                   src="img/port-2.jpg"
                   alt="Приложение"
-                  width="370"
-                  height="294"
+                  width="100%"
+                  height="auto"
                 />
                 <p class="user-portfolio__text">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
@@ -151,8 +151,8 @@
                 <img
                   src="img/port-3.jpg"
                   alt="Маркетинг"
-                  width="370"
-                  height="294"
+                  width="100%"
+                    height="auto"
                 />
                 <p class="user-portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
@@ -170,8 +170,8 @@
                 <img
                   src="img/port-4.jpg"
                   alt="Приложение"
-                  width="370"
-                  height="294"
+                  width="100%"
+                    height="auto"
                 />
                 <p class="user-portfolio__text">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
@@ -189,8 +189,8 @@
                 <img
                   src="img/port-5.jpg"
                   alt="Веб-сайт"
-                  width="370"
-                  height="294"
+                  width="100%"
+                    height="auto"
                 />
                 <p class="user-portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
@@ -210,8 +210,8 @@
                   <img
                     src="img/port-6.jpg"
                     alt="Веб-сайт"
-                    width="370"
-                    height="294"
+                    width="100%"
+                    height="auto"
                   />
                   <p class="user-portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
@@ -231,8 +231,8 @@
                 <img
                   src="img/port-7.jpg"
                   alt="Маркетинг"
-                  width="370"
-                  height="294"
+                  width="100%"
+                    height="auto"
                 />
                 <p class="user-portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
@@ -250,8 +250,8 @@
                 <img
                   src="img/port-8.jpg"
                   alt="Приложение"
-                  width="370"
-                  height="294"
+                  width="100%"
+                    height="auto"
                 />
                 <p class="user-portfolio__text">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице. 
