--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main>
-      <section class="heading">
+      <!-- <section class="heading">
         <div class="container">
           <h1 class="title heading__text">
             ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА
@@ -71,7 +71,7 @@
             Заказать услугу
           </button>
         </div>
-      </section>
+      </section> -->
       <section class="heading-features">
         <div class="container">
           <ul class="heading-features__list list">
@@ -430,45 +430,45 @@
       <section class="user-client">
         <div class="container">
           <h2 class="user-client__title title">Постоянные клиенты</h2>
-          <ul class="user-client__team list">
+          <ul class="user-client__team">
             <li class="user-client__list">
               <a href="" class="user-client__icon">
-                <svg class="user-client__user-icon" width="106" height="60">
+                <svg class="user-client__user-icon" >
                   <use href="./img/symbol-defs.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="user-client__list">
               <a href="" class="user-client__icon">
-                <svg class="user-client__user-icon" width="106" height="60">
+                <svg class="user-client__user-icon" >
                   <use href="./img/symbol-defs.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="user-client__list">
               <a href="" class="user-client__icon">
-                <svg class="user-client__user-icon" width="106" height="60">
+                <svg class="user-client__user-icon" >
                   <use href="./img/symbol-defs.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="user-client__list">
               <a href="" class="user-client__icon">
-                <svg class="user-client__user-icon" width="106" height="60">
+                <svg class="user-client__user-icon" >
                   <use href="./img/symbol-defs.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="user-client__list">
               <a href="" class="user-client__icon">
-                <svg class="user-client__user-icon" width="106" height="60">
+                <svg class="user-client__user-icon" >
                   <use href="./img/symbol-defs.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="user-client__list">
               <a href="" class="user-client__icon">
-                <svg class="user-client__user-icon" width="106" height="60">
+                <svg class="user-client__user-icon" >
                   <use href="./img/symbol-defs.svg#icon-Logo6"></use>
                 </svg>
               </a>
