--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <body>
     <header class="border">
       <div class="container header-div">
-        <div class="header-div">
+        <div class="header-container">
           <a href="" class="logo">
             <span>Web</span><span class="logo__title">Studio</span></a
           >
-          <nav>
+          <nav class="list">
             <ul class="site-nav list">
               <li class="site-nav__iten">
                 <a href="./index.html" class="site-nav__list site-nav__list--activ">Студия</a>
@@ -62,8 +62,8 @@
       </div>
     </header>
     <main>
-      <!-- <section class="heading">
-        <div class="container">
+      <section class="heading">
+        <div class="container heading__container">
           <h1 class="title heading__text">
             ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА
           </h1>
@@ -71,7 +71,7 @@
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
       <section class="heading-features">
         <div class="container">
           <ul class="heading-features__list list">
