--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="border">
+    <header  class="border">
       <div class="container header-div">
-        <div class="header-div">
+        <div class="header-container">
           <a href="" class="logo">
-            <span>Web</span><span class="logo__header">Studio</span></a
+            <span>Web</span><span class="logo__title">Studio</span></a
           >
-          <nav>
+          <nav class="list">
             <ul class="site-nav list">
               <li class="site-nav__iten">
                 <a href="./index.html" class="site-nav__list">Студия</a>
