--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
             <div class="mob-contacts">
               <ul class="mob-contacts__nav list">
                 <li class="mob-contacts__iten">
-                  <a href="tel:+380961111111" class="mob-contacts__list--activ">
+                  <a href="tel:+380961111111" class="mob-contacts__list-tel">
                   +38 096 111 11 11</a
                   >
                 </li>
