--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="border">
       <div class="container header-div">
         <div class="header-container">
-          <a href="" class="logo">
+          <a href="" class="logo header-logo">
             <span>Web</span><span class="logo__title">Studio</span></a
           >
           <nav class="list">
